--- a/depot/app/assets/stylesheets/store.scss
+++ b/depot/app/assets/stylesheets/store.scss
@@ -6,7 +6,7 @@
     margin: 0;
     padding-bottom: 0.5em;
     font: 150% sans-serif;
-    color: #226;
+    color: #227;
     border-bottom: 3px dotted #77d;
   }
 
